--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Hero -->
         <header class="hero">
             <div class="banner">
-                <h1>Model Project</h1>
+                <h1>Modal Project</h1>
                 <button class="btn modal-btn">open modal</button>
             </div>
         </header>
